# github-code-analyzer

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  DEPLOY_NOW.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  Procfile  Procfile_simple  QUICK_START.md  RAILWAY_EASY_DEPLOY.md  README.md  README_DEPLOYMENT.md  RENDER_STEP_BY_STEP.md  WEBHOOK_SETUP_GUIDE.md  app_simple.py  demo.py  docker-compose.yml  prepare_deployment.sh  pyproject.toml  render.yaml  requirements.txt  requirements_web.txt  setup.sh  simple_webhook_handler.py  static_analyzer_config.yaml  test_mcp_server.py  web_app.py
.github/workflows/: basic-validation.yml  deploy-validation.yml  static-analysis.yml  validation.yml
mcp_server/: README.md  config.yaml  github_analyzer.py  llm_integration_example.py  requirements.txt  webhook_handler.py
samples/: compliant_code.c  deviations.yaml  sample_output.json  static_analyzer_config.yaml  test_violations.c
static_analyzer/: __init__.py  cli.py  requirements.txt
static_analyzer/ai_assistant/: __init__.py
static_analyzer/ast/: __init__.py
static_analyzer/config/: __init__.py
static_analyzer/models/: __init__.py
static_analyzer/rules/: __init__.py  cert.py  misra.py
templates/: index.html
test_files/: README.md  adc.cpp  adc.h  gpio.cpp  gpio.h  main.cpp  sensor.h  system.cpp  timer.cpp  timer.h  uart.cpp  uart.h
test_project/: Makefile  README.md  device.cpp  sensor.cpp
test_simple/: buffer.c  simple.c  utils.h
tests/: test_config.py  test_models.py
